--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "@icons/*": ["./app/assets/icons/*"]
     },
 
     // Vite takes care of building everything, not tsc.
